fix alignment issues

--- a/css/app.css
+++ b/css/app.css
@@ -170,7 +170,6 @@ select {
 
 
 .block {
-    display: inline-block;
     justify-content: space-between;
     flex: 1;
     margin-left: 0.25em;
